<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <import type="net.atomation.rgbdemo.activities.DeviceActivity" />

        <variable
            name="content"
            type="net.atomation.rgbdemo.activities.contents.DeviceActivityContent" />

        <variable
            name="eventHandler"
            type="net.atomation.rgbdemo.activities.DeviceActivity" />

    </data>

    <LinearLayout
        android:id="@+id/activity_device"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="net.atomation.rgbdemo.activities.DeviceActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text='@{content.address}'
            style="@style/Text.Title"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_thickness_small"
            style="@style/Line"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_margin="@dimen/spacing_smaller"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/spacing_small"
                android:text='@{content.connectionState == DeviceActivity.ConnectionStatus.CONNECTED ? @string/disconnect : @string/connect}'
                android:onClick='@{() -> eventHandler.onConnectionButtonClicked()}'
                android:enabled='@{content.connectionState != DeviceActivity.ConnectionStatus.CONNECTING}'
                />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:paddingBottom="@dimen/spacing_smaller"
                android:visibility='@{content.connectionState == DeviceActivity.ConnectionStatus.CONNECTING ? View.VISIBLE : View.GONE}'/>

        </FrameLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium">

            <TableRow android:layout_width="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/led1"
                    style="@style/Text.Title"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/led2"
                    style="@style/Text.Title"
                    />

            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="1"
                    android:text="@string/red"
                    android:textColor="@color/red"
                    style="@style/Text.Field"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    bind:error="@{content.errRed1}"
                    >

                    <EditText
                        android:id="@+id/edt_red1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:hint="@string/hint_color"
                        android:enabled='@{content.connectionState == DeviceActivity.ConnectionStatus.CONNECTED}'
                        android:inputType="number"
                        style="@style/Text.Field"
                        />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="1"
                    android:text="@string/red"
                    android:textColor="@color/red"
                    style="@style/Text.Field"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    bind:error="@{content.errRed2}"
                    >

                    <EditText
                        android:id="@+id/edt_red2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:hint="@string/hint_color"
                        android:enabled='@{content.connectionState == DeviceActivity.ConnectionStatus.CONNECTED}'
                        android:inputType="number"
                        style="@style/Text.Field"
                        />
                    
                </android.support.design.widget.TextInputLayout>
                
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/green"
                    android:textColor="@color/green"
                    style="@style/Text.Field"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    bind:error="@{content.errGreen1}"
                    >

                    <EditText
                        android:id="@+id/edt_green1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:hint="@string/hint_color"
                        android:enabled='@{content.connectionState == DeviceActivity.ConnectionStatus.CONNECTED}'
                        android:inputType="number"
                        style="@style/Text.Field"
                        />
                    
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="1"
                    android:text="@string/green"
                    android:textColor="@color/green"
                    style="@style/Text.Field"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    bind:error="@{content.errGreen2}"
                    >
    
                    <EditText
                        android:id="@+id/edt_green2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:hint="@string/hint_color"
                        android:enabled='@{content.connectionState == DeviceActivity.ConnectionStatus.CONNECTED}'
                        android:inputType="number"
                        style="@style/Text.Field"
                        />
                
                </android.support.design.widget.TextInputLayout>

            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="1"
                    android:text="@string/blue"
                    android:textColor="@color/blue"
                    style="@style/Text.Field"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    bind:error="@{content.errBlue1}"
                    >

                    <EditText
                        android:id="@+id/edt_blue1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:hint="@string/hint_color"
                        android:enabled='@{content.connectionState == DeviceActivity.ConnectionStatus.CONNECTED}'
                        android:inputType="number"
                        style="@style/Text.Field"
                        />

                </android.support.design.widget.TextInputLayout>
                
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="1"
                    android:text="@string/blue"
                    android:textColor="@color/blue"
                    style="@style/Text.Field"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    bind:error="@{content.errBlue2}"
                    >

                    <EditText
                        android:id="@+id/edt_blue2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:hint="@string/hint_color"
                        android:enabled='@{content.connectionState == DeviceActivity.ConnectionStatus.CONNECTED}'
                        android:inputType="number"
                        style="@style/Text.Field"
                        />

                </android.support.design.widget.TextInputLayout>

            </TableRow>

            <TableRow android:layout_width="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:onClick='@{() -> eventHandler.onSetLed1Clicked()}'
                    android:enabled='@{content.connectionState == DeviceActivity.ConnectionStatus.CONNECTED}'
                    android:text="@string/set"
                    style="@style/Text.Field"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:onClick='@{() -> eventHandler.onSetLed2Clicked()}'
                    android:enabled='@{content.connectionState == DeviceActivity.ConnectionStatus.CONNECTED}'
                    android:text="@string/set"
                    style="@style/Text.Field"
                    />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</layout>